2004-12-16  Richard Sandiford  <rsandifo@redhat.com>

	* gas/v850/split-lo16.{s,d}: New test.
	* gas/v850/v850.exp: Run it.

2004-12-15 Jan Beulich  <jbeulich@novell.com>

	* gas/elf/section5.[els]: New.

2004-12-13  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/elf-rel25.d, gas/mips/elf-rel25a.d: Cope with different
	.text alignments.

2004-12-11  Alan Modra  <amodra@bigpond.net.au>

	* gas/alpha/elf-usepv-1.d: Update for changed section syms.
	* gas/arm/mapping.d: Likewise.
	* gas/mips/tmips16-e.d: Likewise.
	* gas/mips/tmips16-f.d: Likewise.
	* gas/mmix/align-1.d: Likewise.
	* gas/mmix/basep-10.d: Likewise.
	* gas/mmix/basep-11.d: Likewise.
	* gas/mmix/basep-7.d: Likewise.
	* gas/mmix/basep-8.d: Likewise.
	* gas/mmix/basep-9.d: Likewise.
	* gas/mmix/builtin1.d: Likewise.
	* gas/mmix/builtin2.d: Likewise.
	* gas/mmix/builtin3.d: Likewise.
	* gas/mmix/bz-c.d: Likewise.
	* gas/mmix/comment-2.d: Likewise.
	* gas/mmix/comment-3.d: Likewise.
	* gas/mmix/cons-2.d: Likewise.
	* gas/mmix/fb-1.d: Likewise.
	* gas/mmix/fb-2.d: Likewise.
	* gas/mmix/geta-c.d: Likewise.
	* gas/mmix/greg1.d: Likewise.
	* gas/mmix/greg1a.d: Likewise.
	* gas/mmix/greg2.d: Likewise.
	* gas/mmix/greg2a.d: Likewise.
	* gas/mmix/greg3.d: Likewise.
	* gas/mmix/greg4.d: Likewise.
	* gas/mmix/greg5.d: Likewise.
	* gas/mmix/greg6.d: Likewise.
	* gas/mmix/greg7.d: Likewise.
	* gas/mmix/greg8.d: Likewise.
	* gas/mmix/is-1.d: Likewise.
	* gas/mmix/jump-c.d: Likewise.
	* gas/mmix/local-1.d: Likewise.
	* gas/mmix/locall1.d: Likewise.
	* gas/mmix/odd-1.d: Likewise.
	* gas/mmix/op-0-1.d: Likewise.
	* gas/mmix/op-0-1s.d: Likewise.
	* gas/mmix/op-0-2.d: Likewise.
	* gas/mmix/prefix1.d: Likewise.
	* gas/mmix/prefix2.d: Likewise.
	* gas/mmix/prefix3.d: Likewise.
	* gas/mmix/pseudo-1.d: Likewise.
	* gas/mmix/pushj-c.d: Likewise.
	* gas/mmix/pushj-cs.d: Likewise.
	* gas/mmix/sym-1.d: Likewise.
	* gas/mmix/weak1-s.d: Likewise.
	* gas/mmix/weak1.d: Likewise.
	* gas/mmix/zerop-1.d: Likewise.