@@ -1,3 +1,8 @@
+2004-12-20  Nick Clifton  <nickc@redhat.com>
+
+	* gas/elf/section5.[ls]: Use % instead of @ in .section
+	directives.
+
 2004-12-16  Richard Sandiford  <rsandifo@redhat.com>
 
 	* gas/v850/split-lo16.{s,d}: New test.
